# paper_feature_selection

./: .gitignore  FS_MO.py  FS_SO.py  README.md  paper.py  pyproject.toml  resultados_comparativa_final.csv  resultados_multiobjetivo.csv  tabla_resumen_paper.csv  tabla_resumen_paper_CI.csv
csv/: resultados_comparativa_final.csv  resultados_multiobjetivo.csv  tabla_resumen_paper_CI.csv
prueba/: algorithms.py  algorithms_mo.py  analysis.py  data_loader.py  evaluator.py  generar_tabla_paper.py  main_experiment.py  main_multiobjective.py  plot_convergence.py  pyproject.toml  tuning_optuna.py
scripts/: algorithms.py  algorithms_mo.py  analysis.py  data_loader.py  evaluator.py  generar_tabla_paper.py  generate_paper_table.py  main_experiment.py  main_multiobjective.py  plot_convergence.py  tuning_optuna.py
